# rtsp

./: .gitignore  CMakeLists.txt
src/: load_frame.cpp  load_frame.hpp  main.cpp  video_reader.cpp  video_reader.hpp
